# books-to-scrape-rust

./: Cargo.toml  README.md
src/: book.rs  main.rs  site_url.rs
