[package]
name = "books_toscrape"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
currency = "0.4.0"
env_logger = "0.9.3"
eyre = "0.6.8"
futures = "0.3.24"
log = "0.4.17"
reqwest = "0.11"
scraper = "0.12.0"
tokio = { version = "1.20.1", features = ["full"] }
url = "2.2.2"
